--- a/auto-pdf/package.json
+++ b/auto-pdf/package.json
@@ -9,7 +9,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "description": "",
   "dependencies": {
