--- a/.github/workflows/gen-pdf.yml
+++ b/.github/workflows/gen-pdf.yml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - 'auto-pdf/**'  # Trigger only if files in the auto-pdf directory are changed
+    paths-ignore:
+      - '**.md'
 
 permissions:
   contents: write  # Allow the workflow to push changes to the repository
